# nlp

./: LICENSE  README.md
semantic_analysis/: .gitignore  README.md  augment_eda.ipynb  augment_llm.ipynb  data_exploration.ipynb  pyproject.toml  train_phobert.ipynb  train_visobert.ipynb
semantic_analysis/data/: aug_eda_hate.csv  aug_eda_offensive.csv  aug_llm_hate.csv  aug_llm_offensive.csv
semantic_analysis/data/convert/: emoticon.txt  teencode.txt
