[project]
name = "semantic-analysis"
version = "0.1.0"
description = "Semantic Analysis for Vietnamese Texts"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.8.1",
    "datasets>=3.6.0",
    "gensim>=4.3.3",
    "google-generativeai>=0.8.5",
    "ipykernel>=6.29.5",
    "langchain-google-genai>=2.0.10",
    "matplotlib>=3.10.3",
    "pandas>=2.3.0",
    "python-dotenv>=1.1.1",
    "scikit-learn>=1.7.0",
    "seaborn>=0.13.2",
    "torch>=2.7.1",
    "tqdm>=4.67.1",
    "transformers>=4.52.4",
]

[dependency-groups]
dev = [
    "ruff>=0.12.0",
]

[tool.ruff]
extend-include = ["*.ipynb"]

[tool.ruff.format]
quote-style = "single"
